@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "delete-admin.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 
 # Parse command-line args
 while(@ARGV > 0) {
@@ -40,6 +41,7 @@ $d || usage("Virtual server $domain does not exist");
 $admin || &usage("Extra administrator $name does not exist in this virtual server");
 &delete_extra_admin($admin, $d);
 &release_lock_webmin();
+&virtualmin_api_log(\@OLDARGV, $d);
 print "Extra administrator $name deleted successfully\n";
 
 sub usage
