@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "delete-database.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 
 # Parse command-line args
 while(@ARGV > 0) {
@@ -55,6 +56,7 @@ else {
 &save_domain($d);
 &refresh_webmin_user($d);
 &run_post_actions();
+&virtualmin_api_log(\@OLDARGV, $d);
 print "Database $name deleted successfully\n";
 
 sub usage
