@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "enable-domain.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 
 $first_print = \&first_text_print;
 $second_print = \&second_text_print;
@@ -76,6 +77,7 @@ delete($d->{'disabled_why'});
 &made_changes();
 &reset_domain_envs($d);
 
+&virtualmin_api_log(\@OLDARGV);
 print "All done!\n";
 
 sub usage
