@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "enable-limit.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 
 $first_print = \&first_text_print;
 $second_print = \&second_text_print;
@@ -97,6 +98,7 @@ foreach $d (@doms) {
 	}
 
 &run_post_actions();
+&virtualmin_api_log(\@OLDARGV);
 
 sub usage
 {
