@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "modify-mail.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 $config{'mail'} || &usage("Email is not enabled for Virtualmin");
 &require_mail();
 
@@ -117,6 +118,7 @@ foreach $d (@doms) {
 	}
 
 &run_post_actions();
+&virtualmin_api_log(\@OLDARGV);
 
 sub usage
 {
