@@ -14,6 +14,7 @@ if (!$module_name) {
 	require './virtual-server-lib.pl';
 	$< == 0 || die "move-domain.pl must be run as root";
 	}
+@OLDARGV = @ARGV;
 
 $first_print = \&first_text_print;
 $second_print = \&second_text_print;
@@ -79,6 +80,7 @@ else {
 	}
 if ($ok) {
 	&$second_print($text{'setup_ok'});
+	&virtualmin_api_log(\@OLDARGV, $d);
 	}
 else {
 	&$second_print($text{'move_failed'});
