@@ -921,3 +921,4 @@ The number of email messages delivered per minute and the number classified as s
 Added links from the Status section of the System Information page to the Webmin modules for their particular servers, and additional stats where available.
 If a migrated domain needs features that are not supported by the system, a warning message is displayed.
 All new SSL certificate and key files how have 700 permissions, so that only the domain owner and Apache (which starts as root) can read them.
+All Virtualmin command-line and remote API programs now participate in Webmin logging, so their invocation and changes can be viewed in the Webmin Actions Log module.
